RESOLVED FIXED25132
help prevent crash in chromium event handling
https://bugs.webkit.org/show_bug.cgi?id=25132
Summary help prevent crash in chromium event handling
Antony Sargent
Reported 2009-04-10 13:19:40 PDT
This is some cleanup motivated by the crash in http://crbug.com/9775 , which happens because of calling window.open inside a window.onload handler. These changes are just part of the fix, along with some asserts to help prevent breakage on future changes. Patch forthcoming. (I will also be adding a layout test for this in a separate patch.)
Attachments
patch (3.27 KB, patch)
2009-04-10 13:25 PDT, Antony Sargent
dglazkov: review-
patch v2 (3.29 KB, patch)
2009-04-10 13:57 PDT, Antony Sargent
dglazkov: review+
Antony Sargent
Comment 1 2009-04-10 13:25:00 PDT
Dimitri Glazkov (Google)
Comment 2 2009-04-10 13:37:26 PDT
Comment on attachment 29395 [details] patch Just some styling nits. > +This is some cleanup motivated by the crash in http://crbug.com/9775 , which > +happens because of calling window.open inside a window.onload handler. > + > +These changes are just part of the fix, along with some asserts to help prevent > +breakage on future changes. We usually indent these to the same col as "Reviewed By". > + // TODO(asargent) this check for hidden value being !empty is a workaround for TODO(asargent) -> FIXME:in WebKit world. > + // Once the fix for that is pulled into chromium we can remove the check here. > + if (!object->GetHiddenValue(key).IsEmpty()) { > + object->DeleteHiddenValue(getKey(listener->isInline())); > + } no brackets around one-liners.
Antony Sargent
Comment 3 2009-04-10 13:57:38 PDT
Created attachment 29396 [details] patch v2 new patch addressing styling issues (good catches, thx!)
Dmitry Titov
Comment 4 2009-04-14 11:31:05 PDT
assignign to me for landing
Dmitry Titov
Comment 5 2009-04-14 12:00:34 PDT
Note You need to log in before you can comment on or make changes to this bug.